# tr808ish

./: .prettierrc  IMPLEMENTATION.md  README.md  build-and-install-vst.sh  eslint.config.js  index.html  package-lock.json  package.json  styles.css
.sdd/: architect.md  best_practices.md  best_practices_vst.md  coding_rules.md  config.json  project.md  sound_specs.md
.sdd/backlog/closed/: 43-ui-design-tokens-and-theme-engine.md  44-ui-grid-layout-resize-and-dpi.md  45-ui-topbar-transport-bpm-swing-preset-midi-dnd.md  59-fx-reverb-delay.md  (+16 more)
.sdd/prompts/: 00_solution_ideation.prompt.md  00_task_solver.prompt.md  01_research.prompt.md  02_architect.prompt.md  03_coding_rules.prompt.md  04_agent.prompt.md
backlog/closed/: 01-DONE.md  01-project-setup.md  03-voice-bass-drum.md  04-voice-snare-drum.md  05-voice-hi-hats.md  10-ui-overhaul-modern-vst.md  12-integration-e2e-tests.md  14-cross-browser-polish.md  15-complete-drum-voices.md  16-voice-parameter-controls.md  17-pattern-chain-song-mode.md  18-swing-shuffle-groove.md  19-midi-io.md  30-vst3-bootstrap-project-and-ci.md  31-vst3-dsp-core-808-voices-low-latency.md  32-vst3-parameters-midi-host-sync-and-state.md  33-vst3-gui-editor-modern-vst-ui.md  34-vst3-qc-latency-packaging-and-docs.md  35-vst3-ui-editor-design-system-and-layout.md  36-vst3-ui-controls-meters-visuals-and-microinteractions.md  37-vst3-voice-parity-and-extended-params.md  38-vst3-fx-sends-reverb-delay-routing-and-master-bus.md  39-vst3-presets-banks-and-pattern-randomizer-modern-genres.md  40-ui-guide-complete-overhaul.md  40-vst3-external-midi-dragdrop-to-daw.md  41-vst3-layout-refactor-grid-constraints-and-dpi.md  42-vst3-preset-wiring-step-sequencer-and-state-sync.md
backlog/open/: 01-project-setup.md  02-audio-scheduler.md  06-voice-clap.md  07-sequencer-grid-ui.md  08-playback-controls.md  09-step-highlighting.md  10-state-management.md  11-localstorage-persistence.md  12-integration-e2e-tests.md  13-performance-optimization.md  14-cross-browser-polish.md  15-complete-drum-voices.md  17-pattern-chain-song-mode.md  18-swing-shuffle-groove.md  19-midi-io.md  30-vst3-bootstrap-project-and-ci.md  33-vst3-gui-editor-modern-vst-ui.md  34-vst3-qc-latency-packaging-and-docs.md  37-vst3-voice-parity-and-extended-params.md  38-vst3-fx-sends-reverb-delay-routing-and-master-bus.md  40-ui-guide-complete-overhaul.md
docs/: plugin-validation.md
native/vst3/CR717/: CMakeLists.txt  README.md
native/vst3/CR717/Source/: BassDrumVoice.h  CustomKnob.h  CymbalVoice.h  Delay.h  DesignTokens.h  LEDPad.h  MasterDynamics.h  MidiDragSource.cpp  MidiDragSource.h  Parameters.h  PatternRandomizer.h  PercussionVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.h  Reverb.h  Sequencer.h  SnareDrumVoice.h  TomVoice.h  TopBar.cpp  TopBar.h  UiGrid.h  Voice.h
native/vst3/CR717/Source/ui/components/: HeaderPanel.h
native/vst3/CR717/Source/ui/components/master/: MasterPanel.h
native/vst3/CR717/Source/ui/components/voices/: VoiceStrip.h
native/vst3/CR717/Source/ui/layout/: GridLayout.h
native/vst3/CR717/tests/: COMPRESSOR_TEST.md
native/vst3/CR717/tests/unit/dsp/: test_compressor.cpp
native/vst3/TR808Garage/: CMakeLists.txt  IMPLEMENTATION.md  IMPLEMENTATION_31.md  IMPLEMENTATION_32.md  QC_REPORT.md  README.md
native/vst3/TR808Garage/Source/: BassDrumVoice.h  CustomFader.h  CymbalVoice.h  Delay.h  HiHatVoice.h  LevelMeter.h  MasterDynamics.h  MidiDragSource.h  Parameters.h  PercussionVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.h  Reverb.h  SnareDrumVoice.h  TomVoice.h  Voice.h
scripts/qa/: QA_CHECKLIST.md  run-pluginval.sh
src/: main.ts
src/audio/: scheduler.ts
src/state/: pattern.ts  store.ts  types.ts
src/ui/: controls.ts  mixer.ts  sequencerGrid.ts  visualizer.ts
tests/: setup.ts
tests/e2e/: example.spec.ts  playback.spec.ts
tests/unit/: state.test.ts  voices.test.ts
(+28 files in other folders)
